--- a/pom.xml
+++ b/pom.xml
@@ -396,6 +396,11 @@
             </dependency>
             <dependency>
                 <groupId>org.wildfly.security</groupId>
+                <artifactId>wildfly-elytron-credential-source-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wildfly.security</groupId>
                 <artifactId>wildfly-elytron-credential-store</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -1231,6 +1236,7 @@
         <module>base</module>
         <module>credential/base</module>
         <module>credential/store</module>
+        <module>credential/source/impl</module>
         <module>credential/source/deprecated</module>
         <module>digest</module>
         <module>http/base</module>
