--- a/credential/base/pom.xml
+++ b/credential/base/pom.xml
@@ -53,6 +53,7 @@
             <groupId>org.wildfly.common</groupId>
             <artifactId>wildfly-common</artifactId>
             <!-- scope is compile ELY-1153 -->
+            <version>1.5.0.Final-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.logging</groupId>
