[ELY-1712] Enhanced Audit Logging - RFC Support and Relibiability/Speed Customization

--- a/audit/pom.xml
+++ b/audit/pom.xml
@@ -56,6 +56,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging-processor</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.logmanager</groupId>
             <artifactId>jboss-logmanager</artifactId>
             <scope>provided</scope>
