--- a/auth/server/base/pom.xml
+++ b/auth/server/base/pom.xml
@@ -80,6 +80,16 @@
             <artifactId>jboss-logging-processor</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.logmanager</groupId>
+            <artifactId>jboss-logmanager</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.threads</groupId>
+            <artifactId>jboss-threads</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <!--Test scope-->
         <dependency>
