--- a/tests/base/pom.xml
+++ b/tests/base/pom.xml
@@ -677,6 +677,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.xnio</groupId>
+            <artifactId>xnio-api</artifactId>
+            <version>3.7.2.Final</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
             <scope>test</scope>
